# 6Img-to-3D

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.md  eval.py  pyproject.toml  smoke_test_seed4d.py  train.py
builder/: data_builder.py  model_builder.py
config/: config.py  config_local_test.py
config/_base_/: dataset.py  dataset_eval.py  dataset_eval_driving.py  dataset_eval_nuscenes_sphere.py  dataset_eval_ring.py  optimizer.py  triplane_decoder.py
dataloader/: dataset.py  dataset_wrapper.py  manifest_dataset.py  rays_dataset.py  transform_3d.py
docs/plans/: 2026-03-03-variable-camera-support-design.md  2026-03-03-variable-camera-support.md  2026-03-06-config-builder-design.md  2026-03-06-config-builder.md  2026-03-06-webui-data-pipeline-design.md  2026-03-06-webui-data-pipeline-plan.md
tests/: test_collate.py  test_data_builder.py  test_manifest_dataset.py  test_manifest_exporter.py  test_pose_embedding.py  test_seed4d_compatibility.py  test_seed4d_data_integration.py  test_variable_cameras_dataset.py  test_variable_cameras_e2e.py  test_webui_data_api.py  test_webui_recipes_api.py
tests/webui/: __init__.py  conftest.py  test_config_io.py
triplane_decoder/: activation.py  decoder.py  helper.py  interpolation.py  intrinsics.py  losses.py  lr_scheduling.py  pif.py  ray_samplers.py  ray_utils.py  rendering.py  scene_contraction.py
triplane_encoder/: __init__.py  tpv_head.py  tpvformer.py
triplane_encoder/modules/: __init__.py  cross_view_hybrid_attention.py  encoder.py  image_cross_attention.py  multi_scale_deformable_attn_function.py  pose_embedding.py  tpvformer_layer.py
utils/: generate_manifest.py  mmcv_compat.py  pickles_generator.py  split_dataset.py
webui/: dev.sh
webui/backend/: database.py  main.py  models.py
webui/backend/api/: configs.py  data.py  jobs.py  recipes.py
webui/backend/schemas/: __init__.py  config_schema.py
webui/backend/services/: config_io.py  job_runner.py  manifest_exporter.py
webui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
webui/frontend/src/: App.tsx  api.ts
webui/frontend/src/pages/: ConfigBuilder.tsx  Evaluation.tsx  SplitManager.tsx  Training.tsx
